app/styles/main.scss
// bower:scss
// endbower

@import 'fonts';

/*****************************
 SCSS Variables
******************************/
// Font Sizes:
$default-font-size: 17;
$home-h2: 25;

// Globals:
$nav-height: 105px;

// Colors:
$dark-brown: #AF3720;
$white: #fff;

/*****************************
 SCSS Mixins
******************************/
@mixin font-size($px) {
    font-size: $px * 1px;
    font-size: $px / $default-font-size * 1rem;
}
@mixin box-sizing($value) {
    -webkit-box-sizing: $value; /* Android ≤ 2.3, iOS ≤ 4 */
    -moz-box-sizing: $value; /* Firefox ≤ 28 */
    box-sizing: $value; /* Chrome, Firefox 29+, IE 8+, Opera, Safari 5.1 */
}
@mixin border-radius($value:$default-border-radius) {
    -webkit-border-radius: $value;
    -moz-border-radius: $value;
    border-radius: $value; /* Android 2.1+, Chrome, Firefox 4+, IE 9+, iOS 4+, Opera 10.50+, Safari 5+ */

    /* useful if you don't want a bg color from leaking outside the border: */
    background-clip: padding-box; /* Android 2.2+, Chrome, Firefox 4+, IE 9+, iOS 4+, Opera 10.50+, Safari 4+ */
}
@mixin box-shadow($shadows...) {
    -webkit-box-shadow: $shadows;
    -moz-box-shadow: $shadows;
    box-shadow: $shadows;
}
@mixin transition($transitions...) {
    -webkit-transition: $transitions;  /* Android 2.1+, Chrome 1-25, iOS 3.2-6.1, Safari 3.2-6  */
    -moz-transition: $transitions;
    -ms-transition: $transitions;
    -o-transition: $transitions;
    transition: $transitions;  /* Chrome 26, Firefox 16+, iOS 7+, IE 10+, Opera, Safari 6.1+  */
}
@mixin transform($transformations...) {
    -webkit-transform: $transformations;  /* Chrome, Opera 15+, Safari 3.1+ */
    -ms-transform: $transformations;  /* IE 9 */
    transform: $transformations;  /* Firefox 16+, IE 10+, Opera */
}
@mixin fixed-wood-bg () {
  background: url("../images/wood.png");
  background-attachment: fixed;
  background-position: center top;
  background-repeat: repeat;
}
@mixin white-wood-bg ($posX, $posY) {
  background: url("../images/wood-white.jpg");
  background-position: $posX $posY;
  background-size: 100%;
  background-repeat: repeat;
}
@mixin thin-white-bar-top ($margin) {
  background: url("../images/thin-white-bar-top.png") repeat-x bottom center;
  height: 70px;

  margin: $margin;
}
@mixin thin-white-bar-bottom ($margin) {
  background: url("../images/thin-white-bar-bottom.png") repeat-x top center;
  height: 70px;

  margin: $margin;
}
/**************************************
 Resets
 **************************************/
html,body,div,span,applet,object,
iframe,h1,h2,h3,h4,h5,h6,p,blockquote,
pre,a,abbr,acronym,address,big,cite,
code,del,dfn,em,img,ins,kbd,q,s,
samp,small,strike,strong,sub,sup,
tt,var,b,u,i,center,dl,dt,dd,
ol,ul,li,fieldset,form,label,legend,
table,caption,tbody,tfoot,thead,tr,th,td,
article,aside,canvas,details,embed,figure,
figcaption,footer,header,hgroup,menu,nav,output,
ruby,section,summary,time,mark,audio,video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  // vertical-align: baseline;
}
html {
  @include box-sizing(border-box);
}

*, *:before, *:after {
  @include box-sizing(inherit);
  -webkit-box-sizing: inherit;
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}

article,aside,details,figcaption,figure,
footer,header,hgroup,menu,nav,section {
  display: block;
}

body {
  font: 13px/1.1 Helvetica,sans-serif;
  text-align: center;
  font-family: 'BigMummy';
}
ol,ul {
  list-style: none;
}
table{
  border-collapse: collapse;
  border-spacing: 0;
}
p{
  line-height: 1.6;
}
a {
  text-align: center;
  text-transform: uppercase;
}
a,
a:visited,
a:hover,
a:active {
  color: #000;
  text-decoration: none;
}
img {
  width: 100%;
}

.browserupgrade {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}
textarea {
  outline: none; // remove blue glow
  overflow: auto; // remove IE scrollbars
}
/* Placeholer text color */
::-webkit-input-placeholder {
  color: gray;
  font-weight: 800;
}
:-moz-placeholder { /* Firefox 18- */
  color: gray;
  font-weight: 800;
}
::-moz-placeholder {  /* Firefox 19+ */
  color: gray;
  font-weight: 800;
}
:-ms-input-placeholder {
  color: gray;
  font-weight: 800;
}

/**************************************
 Helper Classes
 **************************************/
.table,
.table-cell {
    width: 100%;
    height: 100%;
}
.table {
    display: table;
}
.table-cell {
    display: table-cell;
    vertical-align: middle;
}
.anchor-scroll-tag {
  display: inline-block;
  padding-top: $nav-height;
  margin-top: -$nav-height;
}
.div-frame-outer {
  display: table;
  border: 3px solid $white;
  padding: 3px;
  width: 100%;

  .div-frame-inner {
    display:table-cell;
    vertical-align: middle;
    text-align: center;
    background: $white;
  }

}

/**************************************
 Skrollr Parallax Helper Classes
 **************************************/
 #skrollr-body {
  // background: url("../images/wood-bg.jpg") repeat-x left top;
  // height: 100%;
}
.skrollr-window {
    position: relative;
    // width: 100% !important;
    // min-width: 1000px;
    overflow: hidden;
}
.skrollr-layer {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  img {
    width: 100%;
  }
}

/**************************************
 App Styles
 **************************************/
nav#nav-outer {
  width: 100%;
  position: fixed;
  height: $nav-height;
  z-index: 1;
  background: url("../images/nav-bg.jpg");
  background-repeat: no-repeat;
  background-size: 101% 100%;
  background-position: center center;

  #nav-inner {
    margin: 0 auto;
    width: 58%;
    height: 100%;

    #logo  {
      display: inline-block;
      // vertical-align: middle;
      width: 103px;

      img {
        position: relative;
        top: 1px;
        vertical-align: middle;
      }
    }
    ul {
      display: inline-block;
      width: 50%;
      height: 100%;
      margin: 0 auto;


      &:before { // ghost vertical center line
        content: "";
        display: inline-block;
        vertical-align: middle;
        height: 100%;
      }
      li {

        display: inline-block;
        padding: 5px 8px;
        width: 30%;
        // transparent border to stop text
        // from shifting upon hover state
        border: 3px solid rgba(0, 0, 0, 0);
        transition: border .3s;

        &:hover {
          border: 3px solid rgba(118, 101, 85, 1);
        }
        a {

        }
      }
      li#request {
          line-height: 20px;
        a {
        }
      }
    }
  }
}

#hero-section {
  position: relative;
  padding-top: 66.6%;

  #home-bg-con {
  }
  #tag-line-con {
    img {
      width: 70%;
      position: absolute;
      top: -8%;
      left: 15%;
    }
  }
  #couple-con {
    text-align: left;
    >img {
      position: absolute;
      left: 8%;
      width: 20%;
      bottom: 30%;
    }
  }
}

#services-banner {
  @include fixed-wood-bg();
  padding: 25px 0;
  position: relative;
  min-height: 500px;

  .thin-white-bar-top {
    @include thin-white-bar-top( 0 0 50px 0);
  }
  .thin-white-bar-bottom {
    @include thin-white-bar-bottom(70px 0 0 0);
  }
  h2 {
    color: transparent;
    text-indent: -5000px;
    background: url(../images/services-header.png) no-repeat center;
    background-size: 450px;
    height: 110px;
  }
  ul {
    width: 40%;
    overflow: hidden;
    margin: 0 auto;

    li {
      float: left;
      width: 50%;
      padding: 10px 10px;

      .div-frame-outer {
        .div-frame-inner {
          background: url(../images/service-link-bg.png) no-repeat center;
          height: 75px;

          h3 {
            padding: 0 10px;
            width: 100%;
            @include font-size(18);

            font-weight: 700;
            text-transform: uppercase;

            a:hover {
              color: $dark-brown;
            }
          }
          // &:before {
          //   content: "";
          //   display: inline-block;
          //   vertical-align: middle;
          //   height: 100%;
          // }

        }
      }
    }
  }
}

#about-us-section {
  @include white-wood-bg(left, top);
  border-bottom: 5px solid $dark-brown;
  min-height: 400px;

  .about-us-outer {
    width: 300px;
    margin: 0 auto;
    padding: 0 20px;

    .about-us-inner {
      text-align: center;
      vertical-align: middle;



      h2 {
        padding: 20px 0;
        @include font-size($home-h2);
      }
      p {
        font-family: 'Bodini MT';
        @include font-size(15);
        text-align: left;
        padding-bottom: 20px;
      }
    }
  }
}

#request-a-quote {
  @include white-wood-bg(left, bottom);
  padding: 0 0 20px 0;
  min-height: 275px;
  font-weight: 800;

  .outer-wrapper {
      width: 40%;
      margin: 0 auto;


    .inner-wrapper {
      text-align: center;
      vertical-align: middle;

      h2 {
        padding: 20px 0;
        @include font-size($home-h2);
      }
      input,
      textarea {
        @include font-size(30);
        border: 2px solid $dark-brown;
        margin: 0 0 10px 0;
        height: 35px;
        padding-left: 5px;


      }
      input[type="text"],
      input[type="email"],
      input[type="tel"],
      textarea {
        @include white-wood-bg(top, left);
        // For fun with white-wood-bg
          // TODO: add ie support with
          // https://css-tricks.com/snippets/css/css-box-shadow/
        background-attachment: fixed;
        -moz-box-shadow:    inset 0 0 12px #000000;
        -webkit-box-shadow: inset 0 0 12px #000000;
        box-shadow:         inset 0 0 12px #000000;
      }
      input[name="name"] {
        float: left;
        width: 48.5%;
      }
      input[name="email-address"] {
        float: right;
        width: 48.5%;
      }
      input[name="phone-number"],
      textarea {
        width: 100%;
      }
      textarea {
        height: 135px;
        max-height: 500px;
        resize: vertical;
      }
      input[type="submit"] {
        float: right;
        width: 20%;
        padding: 0;
        border: none;
        margin: 0;
        background-color: #000;
        color: $white;
        text-transform: uppercase;
        font-weight: 800;
        cursor: pointer;

        &:hover {
          background-color: $dark-brown;
        }
      }
    }
  }
}

footer {
  @include fixed-wood-bg();
  min-height: 300px;
  width: 100%;
  color: $white;

  .footer-upper-half {

    // float: right;
    // position: relative;
    // left: -50%;

    ul.links {

        padding: 20px 0;

      li {
        @include font-size(30);
        display: inline-block;
        padding: 0 20px;
        border-right: 2px solid $white;
        height: 35px;

        &:last-child {
          border-right: none;
        }
        a {
        vertical-align: top;
          color: $white;

        }
      }
    }

  }
  .footer-lower-half {
    p {
      display: inline-block;
    }
    ul {
      display: inline-block;

      li {
        display: inline-block;
      }
    }
  }
}

/**************************************
 Services Template Page
 **************************************/
#our-work-wrapper {
  text-align: center;
  width: 85%;
  margin: 50px auto;

  .our-work-items {
    overflow: hidden;

    .our-work-item {
      float: left;
      width: 33%;
      // height: 300px;

      a {
        background-color: $dark-brown;
        display: inline-block;
        width: 100%;
        height: 100%;

        img {
          transition: opacity 0.3s;
          -webkit-transition: opacity 0.3s;
        }
        &:hover img{
          -webkit-backface-visibility: hidden;
          opacity: 0.5;
        }
      }
    }
  }
}

